fix button link, modify spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,7 +557,7 @@ h6,
 
 .discord-icon {
   height: 40px;
-  margin-left: 10%;
+  margin-left: 25%;
 }
 
 @media (max-width: 991px) {
